@@ -69,4 +69,5 @@ BUGFIXES:
 052 ==> 453992 - Build error in digiKam Setup.
 053 ==> 453630 - Metadata doesn 't always keep it's hierarchy when written with exiftool.
 054 ==> 426951 - digiKam audio issue.
-055 ==> 
+055 ==> 454318 - Save as Version in Imageeditor not accessible when using external raw editor (rawtherapee).
+056 ==> 
